--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+venv/
 bin/
 build/
 develop-eggs/
@@ -38,6 +39,8 @@ coverage.xml
 .mr.developer.cfg
 .project
 .pydevproject
+.idea
+.settings
 
 # Rope
 .ropeproject
